cls.newInstance();改为了cls.getDeclaredConstructor().newInstance();